--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
                 </div>
 
                 @*navbar offcanvas ends*@
-                <a href="@Url.Action("HomePage", "Home")">
+                <a asp-controller="Home" asp-action="HomePage">
                      <img  class="p-1" src="~/images/logo.png">
                 </a>
                 @*navbar starts*@
@@ -177,11 +177,11 @@
                             <img src="~/images/drop-down.png">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item" href="@Url.Action("UserProfile", "User")" ">My Profile</a></li>
+                            <li><a class="dropdown-item" asp-controller="User" asp-action="UserProfile">My Profile</a></li>
                             <li><a class="dropdown-item" href="#">Volunteering Timesheet</a></li>
                             <li class="dropdown-divider"></li>
                             <li>
-                                <a class="dropdown-item" asp-controller="Auth" asp-action="Logout">
+                                <a asp-controller="Auth" asp-action="Logout" class="dropdown-item">
                                     Logout
                                 </a>
                             </li>
