--- a/mvc/CI-Platform/CI-Platform-web/Views/Story/ShareStory.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Story/ShareStory.cshtml
@@ -25,22 +25,23 @@
                         }
                     }
                 </select>
+                <div><small class="text-danger" id="HelpBlock-missionTitle"></small></div>
             </div>
             <div class="col">
                 <label asp-for="StoryTitle" class="form-label ms-1">My Story Title</label>
-                <div><small class="text-danger" id="HelpBlock-storyTitle"></small></div>
                 <input asp-for="StoryTitle" type="text" id="StoryTitle" class="form-control" required placeholder="Enter story title">
+                <div><small class="text-danger" id="HelpBlock-storyTitle"></small></div>
             </div>
             <div class="col">
                 <label asp-for="Date" class="form-label ms-1">Date</label>
-                <div><small class="text-danger" id="HelpBlock-date"></small></div>
                 <input asp-for="Date" type="date" id="date" required class="form-control">
+                <div><small class="text-danger" id="HelpBlock-date"></small></div>
             </div>
         </div>
         <!-- end of first row -->
         <!-- ckeditor -->
         <label for="" class="form-label ms-1 mt-3">My Story</label>
-        <div><small class="text-danger" id="HelpBlock-storyDes"></small></div>
+        
         <div class="container border bg-light">
             <div class="options py-2 m-2">
                 <!-- text format options -->
@@ -89,12 +90,13 @@
             <div class="end"></div>
             <!-- <div class="end"></div> -->
         </div>
+            <div><small class="text-danger" id="HelpBlock-storyDes"></small></div>
         <!-- end of ckeditor -->
         <!-- video link -->
         <div class="mt-3">
             <label for="" class="form-label ms-1">Enter Video URL</label>
-            <div><small class="text-danger" id="HelpBlock-urls"></small></div>
             <textarea name="storyTitle" class="form-control videoUrls" id="videoUrls" rows="3" placeholder="Enter your url (Only Youtube URLs are allowed)"></textarea>
+            <div><small class="text-danger" id="HelpBlock-urls"></small></div>
         </div>
         <!-- video link ends -->
         <!-- darg and drop -->
