--- a/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
+++ b/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
@@ -835,6 +835,11 @@ form {
 /*story details page ends*/
 
 /*user profile page starts*/
+.text-danger{
+    display:flex;
+    padding-left:5px;
+    height:10px;
+}
 .user-profile-section {
     border: 1px solid #D9D9D9;
     border-radius: 3px;
@@ -881,7 +886,7 @@ form {
     right:0;
     content: "";
 }
-.skills-container {
+.user-skills-container {
     box-shadow: 0.97px 0.26px 3px #0000000D;
     border: 1px solid #D9D9D9;
     border-radius: 3px;
@@ -890,8 +895,41 @@ form {
     letter-spacing: 0px;
     color: #414141;
     padding: 0.5rem;
-     font: NotoSans-Light;
-     font-size:14px;
+    font: NotoSans-Light;
+    
+}
+.user-skills-container label {
+        font-size: 14px;
+        display: block;
+        line-height: 30px;
+}
+.all-skills-label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+    .all-skills-label.highlight {
+        background-color: #f2f2f2 !important;
+    }
+
+.skills-list {
+    border: 1px solid #ccc;
+    padding: 10px;
+    height:100%;
+    max-height: 100%;
+    overflow-y: auto;
+}
+
+    .skills-list label, .selected-skills-list label {
+        display: block;
+        font-size: 14px;
+        line-height: 30px;
+    }
+
+.selected-skills-list {
+    border: 1px solid #ccc;
+    padding: 10px;
+    min-height: 100%;
 }
 /*user profile page ends*/
 @media(max-width: 1000px) {
