--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/MissionDetail.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/MissionDetail.cshtml
@@ -178,16 +178,13 @@
                                     <div class="modal-body">
                                         @foreach (var u in Model.UserList)
                                         {
-
-
-
                                             <div class="mt-2" style="display : flex; justify-content : space-between;">
 
                                                 <span class="me-4 ">@u.FirstName @u.LastName</span>
 
-                                                @if (u.MissionInviteToUsers.Any(i => i.ToUserId == u.UserId))
+                                                @if (u.MissionInviteToUsers.Any(i => i.ToUserId == u.UserId && mission_id == i.MissionId))
                                                 {
-                                                    <span style="margin-left : 6%;" mailto:class="invited-@u.UserId"><button class="btn btn-success model-button model-invite-btn disabled" data-mission-id="@mission_id" data-from-user-id="@Id" data-to-user-id="@u.UserId">Invited</button></span>
+                                                    <span style="margin-left : 6%;" mailto:class="invited-@u.UserId"><button class="btn btn-success model-button model-invite-btn disabled" data-mission-id="@mission_id" data-from-user-id="@Id" data-to-user-id="@u.UserId">Already Invited</button></span>
 
                                                 }
                                                 else
@@ -350,13 +347,14 @@
                 <div id="Comments" class="container tab-pane fade">
                     <br>
                     <h3>Comments</h3>
-                    <form method="post">
-                        <div class="form-floating">
-                            <textarea class="form-control my-2 newComment" placeholder="Leave a comment here" style="height: 100px"></textarea>
+                    <div >
+                        <div class="">
+                            <textarea class=" form-control my-2 newComment" placeholder="Leave a comment here..." rows="3"></textarea>
                             @* <label for="floatingTextarea2">Enter your Comments here...</label>*@
                         </div>
                         <button class="btn card-btn commentButton" data-mission-Id="@mission_id">Post Comment</button>
-                    </form>
+                        <span id="CommentHelpBox" class="validate-text"></span>
+                    </div>
                     <div class="container mt-2 bg-light overflow-scroll p-4" style="max-height:30rem">
                         @foreach (var com in Model.ApprovedComments)
                         {
@@ -364,7 +362,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="d-flex">
-                                            <img class="rounded-circle comments-img d-none d-md-flex" src=@com.User.Avtar />
+                                            <img class="rounded-circle comments-img d-none d-md-flex" src=~/images/@com.User.Avtar />
                                             <div class="comments-details">
                                                 <h6>@com.User.FirstName @com.User.LastName</h6>
                                                 <p> @com.CreatedAt.Value.ToString("dddd, MMMM dd, yyyy, h:mm tt")</p>
@@ -444,8 +442,15 @@
                 <a class=" flex-start border-end prevVolunteersBtn">
                     <img class="pe-2" src="~/images/left.png" />
                 </a>
-
-                <span>1-3 of @Model.totalVolunteers Volunteers</span>
+                @if(Model.totalVolunteers == 0)
+                {
+                    <span>0 of 0 Recent Volunteers</span>
+                }
+                else
+                {
+                    <span class="pagination-vol-info"></span>
+                }
+                
 
                 <a class=" border-start flex-end ">
                     <img class="ps-2" src="~/images/right-arrow1.png" />
