--- a/mvc/CI-Platform/CI-Platform-web/Views/Story/_StoryListingPartial.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Story/_StoryListingPartial.cshtml
@@ -6,59 +6,62 @@
 <span id="storyCount" class="d-none">@totalRecords</span>
 <!-- Card start for GridView -->
     <div class="container my-5">
-        <div class=" row row-cols-md-2 row-cols-lg-3 row-cols-sm-1 g-4">
-            <!-- Card starts from col -->
-            @foreach(var obj in Model.DisplayStoryCard)
-            {
-            var story_id = obj.StoryId;
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-img position-relative">
-                        <div>
-                             @{
-                                var default_img = obj.StoryMedia.Where(s => s.StoryId == story_id).FirstOrDefault();
-                             }
-                            @if(default_img == null)
-                            {
-                                <img src="~/images/no-image.png" class="card-img-top">
-                            }
-                            else
-                            { 
-                                <img src="~/images/Upload/Story/@default_img.Path" class="card-img-top" >
-                            }
-                              
-                            <button class="btn-view-details-story rounded-pill px-4 py-2 position-absolute top-50 start-50 translate-middle" onclick="location.href='@Url.Action("StoryDetails","Story", new{MissionId = obj.MissionId, UserId = obj.UserId})' ">
-                                View Details &nbsp;
-                                <i class="bi bi-arrow-right"></i>
-                            </button>
-                        </div>
-                        <div class="theme-pill rounded-pill"> @obj.Mission.MissionTheme.Title  </div>
-                    </div>
-                    <div class="card-body">
-                        <h3 class="card-title">@obj.Title</h3>
-                        <p class="card-text align-items-center">
-                            @{
-                                int maxLength = 100;
-                                string description = obj.Description.Length > maxLength
-                                ? @obj.Description.Substring(0, maxLength) + "..."
-                                : @obj.Description;
-                            }
 
-                            @description
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-sm-1 g-4">
+                <!-- Card starts from col -->
+                @foreach(var obj in Model.DisplayStoryCard)
+                {
+                var story_id = obj.StoryId;
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-img position-relative">
+                            <div>
+                                 @{
+                                    var default_img = obj.StoryMedia.Where(s => s.StoryId == story_id).FirstOrDefault();
+                                 }
+                                @if(default_img == null)
+                                {
+                                    <img src="~/images/no-image.png" class="card-img-top">
+                                }
+                                else
+                                { 
+                                    <img src="~/images/Upload/Story/@default_img.Path" class="card-img-top"  alt="img">
+                                }
+                              
+                                <button class="btn-view-details-story rounded-pill px-4 py-2 position-absolute top-50 start-50 translate-middle" onclick="location.href='@Url.Action("StoryDetails","Story", new{MissionId = obj.MissionId, UserId = obj.UserId})' ">
+                                    View Details &nbsp;
+                                    <i class="bi bi-arrow-right"></i>
+                                </button>
+                            </div>
+                            <div class="theme-pill rounded-pill"> @obj.Mission.MissionTheme.Title  </div>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">@obj.Title</h3>
+                            <p class="card-text align-items-center">
+                          @*  @{
+                                var StoryDes = Html.Raw(obj.Description); 
+                                int maxLength = 100;
+                                    string description = StoryDes.Length > maxLength
+                                ? StoryDes.Substring(0, maxLength) + "..."
+                                    : @obj.Description;
+                                }*@
+
+                              @Html.Raw(obj.Description)
                      
-                        </p>
-                        <div class="d-flex">
-                            <img class="rounded-circle story-card-icon" src="~/images/@obj.User.Avtar" />
-                             <div class="story-card-icon-detail">
-                                <p>@obj.User.FirstName @obj.User.LastName</p>
-                                <p>@obj.CreatedAt</p>
-                             </div>
+                            </p>
+                            <div class="d-flex">
+                                <img class="rounded-circle story-card-icon" src="~/images/@obj.User.Avtar" />
+                                 <div class="story-card-icon-detail">
+                                    <p>@obj.User.FirstName @obj.User.LastName</p>
+                                    <p>@obj.CreatedAt</p>
+                                 </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            }
- @*           card ends here*@
-            </div>
-        </div>
-        <!-- Card end for GridView -->
+                }
+     @*           card ends here*@
+                </div>
+
+    </div>
+ <!-- Card end for GridView -->
